# polerina

./: .gitignore  README.md  pyproject.toml
config/: analyze.toml  download.toml  run_best_params.toml  run_hp_tuning.toml  run_solver.toml  run_timing_maxcut.toml  run_timing_mis.toml
src/polerina/: __init__.py  cli.py  config.py  logging_utils.py
src/polerina/analysis/: aggregate_results_unified.py  history_plots.py  latex_tables.py
src/polerina/data_handler/: data_loader.py  data_prep.py  graph_utils.py
src/polerina/ga/: async_visualization.py  engine.py  genetic_algorithm.py  utils.py  visualization.py
src/polerina/ga/problems/: __init__.py  base.py  maxcut.py  mis.py
src/polerina/runners/: best_params.py  hp_tuning.py  solver.py
src/polerina/scripts/: download_data.py  run_analysis.py  run_hp_tuning.py  run_solver.py
